[gd_scene load_steps=30 format=2]

[ext_resource path="res://REAL BUTT ENEMIES/Boux.png" type="Texture" id=1]
[ext_resource path="res://REAL BUTT ENEMIES/Wahchon.gd" type="Script" id=2]
[ext_resource path="res://REAL BUTT ENEMIES/HitBoux.tscn" type="PackedScene" id=3]
[ext_resource path="res://REAL BUTT ENEMIES/BoxDed.png" type="Texture" id=4]
[ext_resource path="res://BingosBadestSounds/StompBox.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 14, 14.25 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Run",
"speed": 25.0
} ]

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 24 ), SubResource( 24 ), SubResource( 24 ), SubResource( 24 ), SubResource( 24 ), SubResource( 24 ), SubResource( 24 ), SubResource( 24 ) ],
"loop": true,
"name": "Died",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 14, 12 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 11, 2.75 )

[node name="Wahchon" type="KinematicBody2D"]
position = Vector2( 0, -16 )
scale = Vector2( 2, 2 )
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 26 )
animation = "Run"
frame = 7
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 15 )
animation = "Died"

[node name="LedgeCheck" type="RayCast2D" parent="."]
position = Vector2( 14, 16 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="LedgeCheck2" type="RayCast2D" parent="."]
position = Vector2( -14, 16 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="HitBoux" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoux"]
position = Vector2( 0, 12 )
shape = SubResource( 25 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -13.75 )
shape = SubResource( 17 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
max_distance = 15278.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
